ajout commentaire et javadoc plus correction doublons